--- a/css/style.css
+++ b/css/style.css
@@ -5,8 +5,30 @@ p{/*selektor znacznika/elementu */
     background-color: cadetblue;   
 }
 /*Pseudo selektory*/
-#par1::before{
+#par1::before, #par1::after{
     content:'*';
     color:#ffffff;
     font-size: 3em; /* 3 razy wielkość rodzica*/
+}
+ul{
+    list-style-type: none;
+}
+li::before{
+    content: '\0025';    
+}
+#par2::first-line{ 
+color: #876543;
+}
+#par2::first-letter, #par1::first-letter{
+  
+    font-size: 10em;
+}
+/*pseudo klasy*/
+a:visited{ 
+color:crimson;
+}
+a:hover{
+    color:green;
+    font-size:2em;
+    
 }
